--- a/VW_CarStock_WebAPI/VW_CarStock_WebAPI.csproj
+++ b/VW_CarStock_WebAPI/VW_CarStock_WebAPI.csproj
@@ -4,13 +4,18 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VW_CarStock_DB\VW_CarStock_DB.sqlproj" />
+    <ProjectReference Include="..\VW_CarStock_Classes\VW_CarStock_Classes.csproj" />
   </ItemGroup>
 
   <ItemGroup>
